--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "infeedo",
   "version": "1.0.0",
-  "description": "",
+  "description": "Scheduler which sends good morning to every user globally",
   "main": "index.js",
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -23,6 +23,6 @@
     "start": "babel-node --presets es2015 ./src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ramakant vaishnav",
   "license": "ISC"
 }
