removed credentials and added docker-compose file for mysql

--- a/config.json
+++ b/config.json
@@ -2,17 +2,17 @@
     "db": {
         "host": "127.0.0.1",
         "port": 3306,
-        "database": "InFeedo",
+        "database": "infeedo",
         "dialect": "mysql",
         "maxPoolSize": 5,
         "minPoolSize": 0,
         "user": "root",
-        "password": "rkv4168"
+        "password": "password"
     },
     "mailer": {
         "service": "gmail",
-        "user": "ram4168@gmail.com",
-        "pass": "zmjxwclcrcrwkidm",
+        "user": "user@gmail.com",
+        "pass": "**************",
         "subject": "Greetings",
         "MessageBody": "Good Morning !!!"
     }
