--- a/sequelize-config.json
+++ b/sequelize-config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "rkv4168",
     "database": "infeedo",
     "host": "127.0.0.1",
     "dialect": "mysql"
